@@ -1,6 +1,8 @@
 Release 1.0 (in development)
 ============================
 
+* Added ``tab-width`` option to ``literalinclude`` directive.
+
 * The ``html_sidebars`` config value can now contain patterns as
   keys, and the values can be lists that explicitly select which
   sidebar templates should be rendered.  That means that the builtin
